--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 @import "tailwindcss";
 @plugin "daisyui";
 
+* {
+  font-family: "Inter", sans-serif;
+}
 
 
 :root[data-theme="light"] {
